added content to html and css file

--- a/index.html
+++ b/index.html
@@ -17,29 +17,56 @@
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
-            <li>The head element gives information about the webpage that the user cannot see.</li>
-            <li>The body element contains the items the user can see.</li>
+            <li>The <b>head</b> element gives information about the webpage that the user cannot see.</li>
+            <li>The <b>body</b> element contains the items the user can see.</li>
+            <li>The <b>title</b> element defines the title for the webpage.</li>
+            <li>The <b>style</b> element defines CSS styles.</li>
+            <li>The <b>base</b> element defines the base URL for a page.</li>
+            <li>The <b>link</b> element connects an external resource to the HTML document.</li>
+            <li>The <b>meta</b> element defines metadeta. (e.g. charset, http-equiv, viewport)</li>
+            <li>The <b>script</b> element embeds client-side scripts in the HTML document.</li>
+            <li>The <b>div</b> element creates a division in the page.</li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">HTML Elements Reference Sheet</a></b></li>
           </ul>
       </section>
    
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-            <li>Item 1</li>
-        </ul>
+            <li><b>Margin</b> adds space around the <i>outside</i> of an element.</li>
+            <li><b>Padding</b> adds space around content <i>inside</i> of an element.</li>
+            <li><b>Selector</b> defines element/attributes which the rules/declarations will apply.</li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">CSS Properties/Class/Etc. Reference Sheet</a></li>
+          </ul>
       </section>
    
       <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
-            <li>Item 1</li>
+            <li>A <b>Repository (repo)</b> is a folder in which all files and their version histories are stored.</li>
+            <li>A <b>Branch</b> is a workspace in which you can make changes that won't affect the live site.</li>
+            <li><b>Markdown (.md)</b> is a way to write in Github that converts plain text to Github code.</li>
+            <li><b>Commit changes</b> refers to saving a record of a change made to a file in a repo.</li>
+            <li>A <b>Pull Request</b> is the way to ask for changes made to a branch to be merged into another branch that also allows for multiple users to see, discuss, and review work being done.</li>
+            <li><b>Merge</b> refers to what happens after a pull request is approved, where the commit will be pulled in (merged) from one branch to another and then deployed on the live site.</li>
+            <li><b>Issues</b> are how work is tracked when using Git. Allow users to report new tasks and content fixes, as well as allows users to track progress on a project board from beginning to end.</li>
+            <li><b>Federalist</b> is a platform that securely deploys a website from a Github repo in minutes and lets users preview proposed and published changes.</li>
+            <li><b>Clone</b> refers to a copy of a repo hosted locally on the user's device.</li>
+            <li><b>Fork</b> refers to when you copy another user's repo to your own account and make changes that leave the original unaffected (but still allows you to update).</li>
+            <li><b>Push/Pull</b> merging changes to and from local, respectively.</li>
+            <li><a href="https://education.github.com/git-cheat-sheet-education.pdf">Git Cheat Sheet</a></li>
         </ul>
       </section>
    
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-            <li>Item 1</li>
+            <li><b>Variables</b> are containers that store values.</li>
+            <li><b>Comments</b> are snippets of non-visible text that are surrounded by "/* */".</li>
+            <li><b>Conditionals</b> are code structures used to test if an expression returns true or not.</li>
+            <li><b>Functions</b> are a set of instructions that tells the computer how to perform a task.</li>
+            <li><b>Events</b> are code structures that listen for activity in the browser and run code in reponse.</li>
+            <li><a href="https://htmlcheatsheet.com/js/">Javascript Reference Sheet</a></li>
         </ul>
       </section>
     </main>
